--- a/going-out_experiment1_plots.Rmd
+++ b/going-out_experiment1_plots.Rmd
@@ -6,27 +6,21 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-library(ggplot2)
+library(tidyverse)
+library(cowplot)
+library(ggsignif)
+library(ggpubr)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-```{r, Graphs}
-Data <-
-  Data %>%
-  mutate(ConditionNumeric =
+```{r Graphs}
+dataExp1 <-
+  dataExp1 %>%
+  mutate(CommunicationNumeric =
            ifelse(
-             Condition == "Imperative",
+             Communication == "Imperative",
              2,
-             ifelse(Condition == "Reasoning", 3, 1)
+             ifelse(Communication == "Personal Responsibility", 3, 1)
            ),
          VAS = VAS/100)
 
@@ -48,48 +42,48 @@ h = 4
 
 
 #################33 Density plot of VAS per group
-a <- ggplot(Data %>% filter(Perspective == "Personal", Risk == "High Risk"), 
-       aes(x = VAS, fill = Condition)) +
+a <- ggplot(dataExp1 %>% filter(Perspective == "Personal", Risk == "High Risk"), 
+       aes(x = VAS, fill = Communication)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), 
+  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), 
                alpha = .4, colour = "black",
                notch = TRUE, coef = 1 ) +
   labs(title = "High Risk, Self Framing") + 
   labs(x = "Permissiveness", y = "Density") +
   theme_light()
 
-b <- ggplot(Data %>% filter(Perspective == "Personal", Risk == "Low Risk"), 
-       aes(x = VAS, fill = Condition)) +
+b <- ggplot(dataExp1 %>% filter(Perspective == "Personal", Risk == "Low Risk"), 
+       aes(x = VAS, fill = Communication)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
+  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
 labs(title = "Low Risk, Self Framing") + ylab("") + xlab("Permissiveness") +
   theme_light()
 
-c <- ggplot(Data %>% filter(Perspective == "Personal", Risk == "Minimal Risk"),
-       aes(x = VAS, fill = Condition)) + 
+c <- ggplot(dataExp1 %>% filter(Perspective == "Personal", Risk == "Minimal Risk"),
+       aes(x = VAS, fill = Communication)) + 
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
+  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
   labs(title = "Minimal Risk, Self Framing") + ylab("") + xlab("Permissiveness") +
   theme_light()
 
-d <- ggplot(Data %>% filter(Perspective == "General", Risk == "High Risk"), 
-       aes(x = VAS, fill = Condition)) +
+d <- ggplot(dataExp1 %>% filter(Perspective == "General", Risk == "High Risk"), 
+       aes(x = VAS, fill = Communication)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
+  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
   labs(title = "High Risk, Other Framing") + ylab("Density") + xlab("Permissiveness") +
   theme_light()
 
-e <- ggplot(Data %>% filter(Perspective == "General", Risk == "Low Risk"), 
-       aes(x = VAS, fill = Condition)) +
+e <- ggplot(dataExp1 %>% filter(Perspective == "General", Risk == "Low Risk"), 
+       aes(x = VAS, fill = Communication)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
+  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
   labs(title = "Low Risk, Other Framing") + ylab("") + xlab("Permissiveness") +
   theme_light()
 
-f <- ggplot(Data %>% filter(Perspective == "General", Risk == "Minimal Risk"), 
-       aes(x = VAS, fill = Condition)) +
+f <- ggplot(dataExp1 %>% filter(Perspective == "General", Risk == "Minimal Risk"), 
+       aes(x = VAS, fill = Communication)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
+  geom_boxplot(aes(x = VAS, y = CommunicationNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
   labs(title = "Minimal Risk, Other Framing") + ylab("") + xlab("Permissiveness") +
   theme_light()
 
@@ -106,7 +100,7 @@ DensityPlots
 
 
 boxRisk <-
-  ggplot(arrange(Data %>%
+  ggplot(arrange(dataExp1 %>%
                    mutate(Risk = factor(
                      ifelse(
                        Risk == "Minimal Risk", 
@@ -158,17 +152,17 @@ boxRisk <-
 boxRisk
 
 boxComm <-
-  ggplot(Data %>%
-           mutate(Condition = factor(
-             ifelse(Condition == "Reasoning", 
+  ggplot(dataExp1 %>%
+           mutate(Communication = factor(
+             ifelse(Communication == "Personal Responsibility", 
                     "Personal Resp.",
-                    ifelse(Condition == "Imperative",
+                    ifelse(Communication == "Imperative",
                            "Imperative",
                            "Control")), levels = c(
                "Control", "Personal Resp.","Imperative"
              )
            )),
-         aes(x = VAS, y = Condition, fill = Condition)) +
+         aes(x = VAS, y = Communication, fill = Communication)) +
   geom_boxplot(
     position = position_nudge(y = 0.25),
     outlier.shape = NA,
@@ -226,20 +220,20 @@ BoxPlots
 
 
 
-j <- ggplot(Data %>% filter(Perspective == "Personal"),
-       aes(x = Condition, y = VAS, fill = Condition, alpha = 0.4)) +
+j <- ggplot(dataExp1 %>% filter(Perspective == "Personal"),
+       aes(x = Communication, y = VAS, fill = Communication, alpha = 0.4)) +
     geom_flat_violin(position = position_nudge(x = .2, y = 0),adjust = .8)+
   geom_point(position = position_jitter(width = .15), size = .25)+
-  geom_boxplot(aes(x = ConditionNumeric + 0.2, y = VAS), outlier.shape = NA, width = .07, colour = "BLACK", alpha = 1) + 
+  geom_boxplot(aes(x = CommunicationNumeric + 0.2, y = VAS), outlier.shape = NA, width = .07, colour = "BLACK", alpha = 1) + 
   ylab('Permissiveness')+xlab('')+coord_flip()+theme_cowplot()+guides(fill = FALSE, alpha = FALSE, colour = FALSE) +
   scale_fill_manual(values = cbbPalette)+
   labs(tag = "A")
 
-k <- ggplot(Data %>% filter(Perspective == "General"),
-       aes(x = Condition, y = VAS, fill = Condition, alpha = 0.4)) +
+k <- ggplot(dataExp1 %>% filter(Perspective == "General"),
+       aes(x = Communication, y = VAS, fill = Communication, alpha = 0.4)) +
     geom_flat_violin(position = position_nudge(x = .2, y = 0),adjust = .8)+
   geom_point(position = position_jitter(width = .15), size = .25)+
-  geom_boxplot(aes(x = ConditionNumeric + 0.2, y = VAS), outlier.shape = NA, width = .07, colour = "BLACK", alpha = 1) + 
+  geom_boxplot(aes(x = CommunicationNumeric + 0.2, y = VAS), outlier.shape = NA, width = .07, colour = "BLACK", alpha = 1) + 
   ylab('Permissiveness')+xlab('')+coord_flip()+theme_cowplot()+guides(fill = FALSE, alpha = FALSE, colour = FALSE) +
   scale_fill_manual(values = cbbPalette)+
   labs(tag = "B") +
@@ -268,44 +262,44 @@ my_grob <-
 
 df <- 
   summary(ComRiskEmm) %>% 
-  arrange(Condition)
+  arrange(Communication)
 
 gd <- 
-  Data %>% 
-  group_by(Condition, Risk) %>% 
+  dataExp1 %>% 
+  group_by(Communication, Risk) %>% 
   summarise(Permissiveness = mean(VAS)) %>% 
   ungroup %>% 
   mutate(SE = df$SE)
 
 comRiskPlot <-
   ggplot(
-    Data %>%
+    dataExp1 %>%
       mutate(
-        Condition = factor(
+        Communication = factor(
           ifelse(
-            Condition == "Reasoning",
+            Communication == "Personal Responsibility",
             "Personal Resp.",
-            ifelse(Condition == "Imperative", "Imperative", "Control")
+            ifelse(Communication == "Imperative", "Imperative", "Control")
           ),
           levels = c("Imperative", "Personal Resp.", "Control")
         ),
         Risk = factor(Risk, levels = c("Minimal Risk", "Low Risk", "High Risk"))
       ) %>%
-      group_by(ResponseId, Risk, Condition) %>%
+      group_by(ResponseId, Risk, Communication) %>%
       summarise(VASmean = mean(VAS))
   ) +
-  geom_boxplot(aes(Risk, VASmean, fill = Condition)) +
+  geom_boxplot(aes(Risk, VASmean, fill = Communication)) +
   labs(x = "Risk Level", y = "Permissiveness", fill = "Communication") +
   scale_fill_manual(values = cbbPalette[c(2,3,9)]) +
   theme_light()
 ggsave("./figures/ComRiskBoxPlotExp1.png", w = 6, h = 5)
 
-# ComRiskPlot <- ggplot(gd %>% mutate(Condition = factor(ifelse(Condition == "Reasoning", "Personal Resp.",
-#                                                                                  ifelse(Condition == "Imperative", "Imperative", "Control"))),
+# ComRiskPlot <- ggplot(gd %>% mutate(Communication = factor(ifelse(Communication == "Personal Responsibility", "Personal Resp.",
+#                                                                                  ifelse(Communication == "Imperative", "Imperative", "Control"))),
 #                                      Risk = factor(Risk, levels = c("Minimal Risk", "Low Risk", "High Risk")))) +
-#   aes(x = Risk, y = Permissiveness, color = Condition) +
-#   geom_line(aes(group = Condition), size = 0.8) +
-#   geom_point(aes(group = Condition), size = 2) +
+#   aes(x = Risk, y = Permissiveness, color = Communication) +
+#   geom_line(aes(group = Communication), size = 0.8) +
+#   geom_point(aes(group = Communication), size = 2) +
 #   geom_errorbar(aes(ymin=Permissiveness-SE, ymax=Permissiveness+SE), width=.1, size = 0.8) +
 #   guides(color = guide_legend("Communication"), shape = FALSE) +
 #   xlab("Risk Level") +
@@ -316,17 +310,17 @@ ggsave("./figures/ComRiskBoxPlotExp1.png", w = 6, h = 5)
 #  ComRiskPlot
 
 df2 <- summary(ExploratoryPairs) %>% filter(Risk == "High Risk") %>% arrange(Perspective, contrast)
-gd2 <- Data %>%
-  group_by(Condition, Perspective) %>%
+gd2 <- dataExp1 %>%
+  group_by(Communication, Perspective) %>%
   filter(Risk == "High Risk") %>%
   summarise(Permissiveness = mean(VAS)) %>%
   ungroup() %>%
   mutate(SE = df2$SE)
 
 # HighRiskPerPlot <-  ggplot(gd2 %>% arrange(Perspective)) + 
-#   aes(x = Perspective, y = Permissiveness, color = Condition) +
-#   geom_line(aes(group = Condition), size = 1, position = position_dodge(width = .1)) +
-#   geom_point(aes(group = Condition), position = position_dodge(width = .1), size = 2) +
+#   aes(x = Perspective, y = Permissiveness, color = Communication) +
+#   geom_line(aes(group = Communication), size = 1, position = position_dodge(width = .1)) +
+#   geom_point(aes(group = Communication), position = position_dodge(width = .1), size = 2) +
 #   geom_errorbar(aes(ymin = Permissiveness-SE, ymax = Permissiveness+SE), width = .15, size = 1, position = position_dodge(width = .1)) +
 #   guides(color = guide_legend("Communication"), shape = FALSE) +
 #   labs(tag = "4") +
@@ -338,7 +332,7 @@ gd2 <- Data %>%
 # HighRiskPerPlot
 
 df3 <-
-  Data %>%
+  dataExp1 %>%
   group_by(ResponseId, Sex) %>%
   summarise(Age = mean(Age),
             Permissiveness = mean(VAS))
