--- a/going-out_experiment2_plots.Rmd
+++ b/going-out_experiment2_plots.Rmd
@@ -9,125 +9,147 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-```{r, Graphs}
-Data <-
-  Data %>%
-  mutate(ConditionNumeric =
-           ifelse(
-             Condition == "Imperative",
-             2,
-             ifelse(Condition == "Reasoning", 3, 1)
-           ),
+```{r Graphs}
+dataExp2 <- 
+  dataExp2 %>% 
+  mutate(PerspectiveNumeric = ifelse(Perspective == "Self", 1, 0),
          VAS = VAS/100)
 
 # The palette with black:
-cbbPalette <- c(
-  "#000000",
-  "#E69F00",
-  "#56B4E9",
-  "#009E73",
-  "#F0E442",
-  "#0072B2",
-  "#D55E00",
-  "#CC79A7"
-)
+cbbPalette <- c("#000000", "#E69F00", 
+                "#56B4E9", "#009E73", 
+                "#F0E442", "#0072B2", 
+                "#D55E00", "#CC79A7")
 cbbPaletteBoxPlots <- c("#E69F00","#56B4E9","#000000")
 ## Plot dimensions
 w = 6
 h = 4
 
-
-#################33 Density plot of VAS per group
-a <- ggplot(Data %>% filter(Perspective == "Personal", Risk == "High Risk"), 
-       aes(x = VAS, fill = Condition)) +
+Midpoint_Density <- 
+  ggplot(dataExp2 %>% 
+           filter(Treatment == "Midpoint"), 
+         aes(x = VAS, fill = Perspective)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), 
-               alpha = .4, colour = "black",
-               notch = TRUE, coef = 1 ) +
-  labs(title = "High Risk, Self Framing") + 
-  labs(x = "Permissiveness", y = "Density") +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.05), alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "VAS Midpoint") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
+  scale_fill_manual(values = cbbPalette) +
   theme_light()
 
-b <- ggplot(Data %>% filter(Perspective == "Personal", Risk == "Low Risk"), 
-       aes(x = VAS, fill = Condition)) +
+NoMidpoint_Density <- 
+  ggplot(dataExp2 %>% 
+           filter(Treatment == "No Midpoint"), 
+         aes(x = VAS, fill = Perspective)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-labs(title = "Low Risk, Self Framing") + ylab("") + xlab("Permissiveness") +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.05), 
+               alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "No Midpoint") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
+  scale_fill_manual(values = cbbPalette) +
   theme_light()
 
-c <- ggplot(Data %>% filter(Perspective == "Personal", Risk == "Minimal Risk"),
-       aes(x = VAS, fill = Condition)) + 
+TreatmentPlots <-
+  ggarrange(
+    Midpoint_Density,
+    NoMidpoint_Density,
+    labels = c("A", "B"),
+    nrow = 1,
+    ncol = 2,
+    common.legend = TRUE,
+    legend = "bottom"
+  )
+TreatmentPlots
+ggsave("./figures/DensityPlotExp2.png", width = 2*w, height = 1.3*h) 
+
+################# Density plot of VAS per group
+a <- 
+  ggplot(dataExp2 %>% filter(Treatment == "Midpoint", Risk == "High Risk"), 
+         aes(x = VAS, fill = Perspective)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "Minimal Risk, Self Framing") + ylab("") + xlab("Permissiveness") +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.045), alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "VAS Midpoint, High Risk") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
   theme_light()
 
-d <- ggplot(Data %>% filter(Perspective == "General", Risk == "High Risk"), 
-       aes(x = VAS, fill = Condition)) +
+b <- 
+  ggplot(dataExp2 %>% filter(Treatment == "Midpoint", Risk == "Low Risk"), 
+         aes(x = VAS, fill = Perspective)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "High Risk, Other Framing") + ylab("Density") + xlab("Permissiveness") +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.045), alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "VAS Midpoint, Low Risk") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
   theme_light()
 
-e <- ggplot(Data %>% filter(Perspective == "General", Risk == "Low Risk"), 
-       aes(x = VAS, fill = Condition)) +
+c <- 
+  ggplot(dataExp2 %>% filter(Treatment == "Midpoint", Risk == "Minimal Risk"), 
+         aes(x = VAS, fill = Perspective)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "Low Risk, Other Framing") + ylab("") + xlab("Permissiveness") +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.045), alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "VAS Midpoint, Minimal Risk") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
   theme_light()
 
-f <- ggplot(Data %>% filter(Perspective == "General", Risk == "Minimal Risk"), 
-       aes(x = VAS, fill = Condition)) +
+d <- 
+  ggplot(dataExp2 %>% filter(Treatment == "No Midpoint", Risk == "High Risk"), 
+         aes(x = VAS, fill = Perspective)) +
   geom_density(alpha = 0.4) +
-  geom_boxplot(aes(x = VAS, y = ConditionNumeric * -0.0015 + 0.05), alpha = .4, colour = "black", notch = TRUE, coef = 1 ) +
-  labs(title = "Minimal Risk, Other Framing") + ylab("") + xlab("Permissiveness") +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.045), alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "No Midpoint, High Risk") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
+  theme_light()
+
+e <- 
+  ggplot(dataExp2 %>% filter(Treatment == "No Midpoint", Risk == "Low Risk"), 
+         aes(x = VAS, fill = Perspective)) +
+  geom_density(alpha = 0.4) +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.045), alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "No Midpoint, Low Risk") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
+  theme_light()
+
+f <- 
+  ggplot(dataExp2 %>% filter(Treatment == "No Midpoint", Risk == "Minimal Risk"), 
+         aes(x = VAS, fill = Perspective)) +
+  geom_density(alpha = 0.4) +
+  geom_boxplot(aes(x = VAS, y = PerspectiveNumeric * -0.0015 + 0.045), alpha = .4, colour = "black",notch = TRUE, coef = 1 ) +
+  labs(title = "No Midpoint, Minimal Risk") + 
+  ylab("Density") + 
+  xlab("Permissiveness") +
   theme_light()
 
 
-DensityPlots <- ggarrange(a, b, c, d, e, f ,
-                          labels = c("A", "B", "C", "D", "E", "F"), 
-                          nrow = 2, ncol = 3, 
-                          common.legend = TRUE, legend = "bottom")
-ggsave("./figures/DensityPlot.png", width = 3*w, height = 2.5*h) 
+RiskPlots_Exp2 <- 
+  ggarrange(a, b, c, d, e, f ,
+            labels = c("A", "B", "C", "D", "E", "F"), 
+            nrow = 2, ncol = 3, common.legend = TRUE, legend = "bottom")
+ggsave("./figures/RiskPlotsExp2.png", width = 3*w, height = 2.5*h) 
 
-DensityPlots
+RiskPlots_Exp2
 
 ################################################## Box Plots
 
 
-boxRisk <-
-  ggplot(arrange(Data %>%
-                   mutate(Risk = factor(
-                     ifelse(
-                       Risk == "Minimal Risk", 
-                       "Minimal", 
-                       ifelse(
-                         Risk == "Low Risk",
-                         "Low",
-                         "High"
-                       )
-                     ),
-                     levels = c("Minimal", 
-                                "Low", 
-                                "High")
-                   ))),
+boxRiskExp2 <-
+  ggplot(dataExp2 %>%
+           mutate(Risk = factor(
+             Risk,
+             levels = c("Minimal Risk",
+                        "Low Risk", "High Risk")
+           )),
          aes(x = VAS, y = Risk, fill = Risk)) +
   geom_boxplot(
     position = position_nudge(y = 0.25),
     outlier.shape = NA,
     notch = TRUE,
     width = 0.2
-  )+
+  ) +
   geom_point(position = position_jitter(height = 0.1),
              size = .15,
              col = "darkgrey") +
@@ -135,7 +157,7 @@ boxRisk <-
     "segment",
     x = c(-.03, -.03, -.08),
     xend = c(-.03, -.03, -.08),
-    y = c(1.23, 2.27, 1.17),
+    y = c(1.23, 2.27, 1.18),
     yend = c(2.22, 3.22, 3.30),
     size = .8
   ) +
@@ -148,211 +170,62 @@ boxRisk <-
     size = 7
   ) +
   labs(title = "Permissiveness by Risk Level") +
-  xlab("Permissiveness") + ylab("Risk") +
-  xlim(-.1, 1.005) +
+  xlab("Permissiveness") + ylab("Risk Level") +
+  xlim(-.10, 1.005) +
   scale_fill_brewer(palette = "YlOrRd") +
-  guides(fill = guide_legend(reverse = T)) +
-  labs(tag = "1A") +
-  theme_light() +
-  theme(axis.text.y = element_blank())
-boxRisk
+  guides(fill = guide_legend(reverse = TRUE)) +
+  theme_light()
+boxRiskExp2
+ggsave("./figures/exp2RiskBoxPlot.png")
 
-boxComm <-
-  ggplot(Data %>%
-           mutate(Condition = factor(
-             ifelse(Condition == "Reasoning", 
-                    "Personal Resp.",
-                    ifelse(Condition == "Imperative",
-                           "Imperative",
-                           "Control")), levels = c(
-               "Control", "Personal Resp.","Imperative"
-             )
-           )),
-         aes(x = VAS, y = Condition, fill = Condition)) +
-  geom_boxplot(
-    position = position_nudge(y = 0.25),
-    outlier.shape = NA,
-    notch = TRUE,
-    width = 0.2
-  ) +
-  geom_point(position = position_jitter(height = 0.1),
-             size = .15,
-             col = "darkgrey") +
-  annotate(
-    "segment",
-    x = c(-.03, -.03, -.075),
-    xend = c(-.03, -.03, -.075),
-    y = c(1.23, 2.27, 1.17),
-    yend = c(2.22, 3.22, 3.30),
-    size = .8
-  ) +
-  annotate(
-    "text",
-    x = c(-.035, -.055, -.09),
-    y = c(1.75, 2.75, 2.25),
-    label = c("*", "n.s.", "**"),
-    angle = 90,
-    size = c(7, 5, 7)
-  ) +
-  labs(title = "Permissiveness by Communication Style") +
-  xlab("Permissiveness") + 
-  ylab("Communication Style") +
-  xlim(-.1, 1.005) +
-  guides(fill = guide_legend("Communication", reverse = T)) +
-  scale_fill_manual(values = cbbPalette[c(9, 3, 2)]) +
-  labs(tag = "1B") +
-  theme_light() +
-  theme(axis.text.y = element_blank())
-boxComm
 
-BoxPlots <-
-  ggarrange(
-    boxRisk,
-    boxComm,
-    nrow = 1,
-    ncol = 2,
-    common.legend = F,
-    legend = "bottom"
-  )
-ggsave("./figures/BoxPlot.png", width = 2*w, height = 1.3*h)
-BoxPlots
+
 
 ```
 
-```{R Plots continued}
-
-############################ Raincloud plot
-#source("Raincloudplot.R")
 
 
+```{r Plots continued #2}
 
-j <- ggplot(Data %>% filter(Perspective == "Personal"),
-       aes(x = Condition, y = VAS, fill = Condition, alpha = 0.4)) +
-    geom_flat_violin(position = position_nudge(x = .2, y = 0),adjust = .8)+
-  geom_point(position = position_jitter(width = .15), size = .25)+
-  geom_boxplot(aes(x = ConditionNumeric + 0.2, y = VAS), outlier.shape = NA, width = .07, colour = "BLACK", alpha = 1) + 
-  ylab('Permissiveness')+xlab('')+coord_flip()+theme_cowplot()+guides(fill = FALSE, alpha = FALSE, colour = FALSE) +
-  scale_fill_manual(values = cbbPalette)+
-  labs(tag = "A")
+RiskAggregates <- 
+  dataExp2 %>%
+  group_by(ResponseId, Sex, Risk) %>%
+  summarise(VAS = mean(VAS),
+            Age = mean(Age)) %>%
+  ungroup()
 
-k <- ggplot(Data %>% filter(Perspective == "General"),
-       aes(x = Condition, y = VAS, fill = Condition, alpha = 0.4)) +
-    geom_flat_violin(position = position_nudge(x = .2, y = 0),adjust = .8)+
-  geom_point(position = position_jitter(width = .15), size = .25)+
-  geom_boxplot(aes(x = ConditionNumeric + 0.2, y = VAS), outlier.shape = NA, width = .07, colour = "BLACK", alpha = 1) + 
-  ylab('Permissiveness')+xlab('')+coord_flip()+theme_cowplot()+guides(fill = FALSE, alpha = FALSE, colour = FALSE) +
-  scale_fill_manual(values = cbbPalette)+
-  labs(tag = "B") +
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y = element_blank())
+AgeSexPlotExp2 <- 
+  ggplot(Aggregates) +
+    aes(x = Age, y = VAS, col = Sex) +
+    geom_point() +
+    geom_smooth(method = "lm") +
+    labs(y = "Permissiveness") +
+    scale_colour_viridis_d(begin = .3, end = .75) +
+    theme_light()
+AgeSexPlotExp2
+ggsave("./figures/AgeSexExp2.png", height = h*.95, width = w*.95)
 
-rainCloudPlots <- 
-  ggarrange(j, k, ncol = 2, nrow = 1)
-ggsave('./figures/RaincloudPlot.png', width = w*2, height = h*2)
+AgeRiskPlotExp2 <-
+  ggplot(RiskAggregates) +
+    aes(x = Age, y = VAS, col = Risk) +
+    geom_point(size = 1) +
+    geom_smooth(method = "lm") +
+    labs(y = "Permissiveness") +
+    scale_colour_brewer(palette = "YlOrRd") +
+    theme_light()
 
+PlotsAgeExp2 <- 
+  ggarrange(AgeRiskPlotExp2, AgeSexPlotExp2,
+            labels = c("A", "B"), 
+            nrow = 1, ncol = 2, 
+            common.legend = FALSE, legend = "bottom")
+ggsave("./figures/AgePlotsExp2.png", width = 2*w, height = 1.3*h) 
 
-####################### Plot 2 and 3 (interactions)
-my_grob <-
-  grobTree(textGrob(
-    "Limits: [0,100]",
-    x = 0.01,
-    y = 0.98,
-    hjust = 0,
-    gp = gpar(
-      col = "black",
-      fontsize = 10,
-      fontface = "italic"
-    )
-  ))
-
-
-df <- 
-  summary(ComRiskEmm) %>% 
-  arrange(Condition)
-
-gd <- 
-  Data %>% 
-  group_by(Condition, Risk) %>% 
-  summarise(Permissiveness = mean(VAS)) %>% 
-  ungroup %>% 
-  mutate(SE = df$SE)
-
-comRiskPlot <-
-  ggplot(
-    Data %>%
-      mutate(
-        Condition = factor(
-          ifelse(
-            Condition == "Reasoning",
-            "Personal Resp.",
-            ifelse(Condition == "Imperative", "Imperative", "Control")
-          ),
-          levels = c("Imperative", "Personal Resp.", "Control")
-        ),
-        Risk = factor(Risk, levels = c("Minimal Risk", "Low Risk", "High Risk"))
-      ) %>%
-      group_by(ResponseId, Risk, Condition) %>%
-      summarise(VASmean = mean(VAS))
-  ) +
-  geom_boxplot(aes(Risk, VASmean, fill = Condition)) +
-  labs(x = "Risk Level", y = "Permissiveness", fill = "Communication") +
-  scale_fill_manual(values = cbbPalette[c(2,3,9)]) +
-  theme_light()
-ggsave("./figures/ComRiskBoxPlotExp1.png", w = 6, h = 5)
-
-# ComRiskPlot <- ggplot(gd %>% mutate(Condition = factor(ifelse(Condition == "Reasoning", "Personal Resp.",
-#                                                                                  ifelse(Condition == "Imperative", "Imperative", "Control"))),
-#                                      Risk = factor(Risk, levels = c("Minimal Risk", "Low Risk", "High Risk")))) +
-#   aes(x = Risk, y = Permissiveness, color = Condition) +
-#   geom_line(aes(group = Condition), size = 0.8) +
-#   geom_point(aes(group = Condition), size = 2) +
-#   geom_errorbar(aes(ymin=Permissiveness-SE, ymax=Permissiveness+SE), width=.1, size = 0.8) +
-#   guides(color = guide_legend("Communication"), shape = FALSE) +
-#   xlab("Risk Level") +
-#   theme_light() +
-#   annotation_custom(my_grob) +
-#   scale_color_manual(values = cbbPalette) +
-#   ggsave("InteractionPlot.png", width = w, height = 1.1*h)
-#  ComRiskPlot
-
-df2 <- summary(ExploratoryPairs) %>% filter(Risk == "High Risk") %>% arrange(Perspective, contrast)
-gd2 <- Data %>%
-  group_by(Condition, Perspective) %>%
-  filter(Risk == "High Risk") %>%
-  summarise(Permissiveness = mean(VAS)) %>%
-  ungroup() %>%
-  mutate(SE = df2$SE)
-
-# HighRiskPerPlot <-  ggplot(gd2 %>% arrange(Perspective)) + 
-#   aes(x = Perspective, y = Permissiveness, color = Condition) +
-#   geom_line(aes(group = Condition), size = 1, position = position_dodge(width = .1)) +
-#   geom_point(aes(group = Condition), position = position_dodge(width = .1), size = 2) +
-#   geom_errorbar(aes(ymin = Permissiveness-SE, ymax = Permissiveness+SE), width = .15, size = 1, position = position_dodge(width = .1)) +
-#   guides(color = guide_legend("Communication"), shape = FALSE) +
-#   labs(tag = "4") +
-#   guides() +
-#   annotation_custom(my_grob) +
-#   scale_color_manual(values = cbbPalette) +
-#   theme_light() +
-#   ggsave("ExploratoryPlot.png", width = w, height = 1.1*h)
-# HighRiskPerPlot
-
-df3 <-
-  Data %>%
-  group_by(ResponseId, Sex) %>%
-  summarise(Age = mean(Age),
-            Permissiveness = mean(VAS))
-
-AgeSexPlotExp1 <-
-  ggplot(df3) +
-  aes(x = Age, y = Permissiveness, col = Sex) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  scale_colour_viridis_d(begin = .25, end = .75) +
-  theme_light()
-ggsave("./figures/exp1AgeGenderPlot.png",
-       width = 0.95 * w,
-       height = 0.9 * h)
+Aggregates <-
+  Aggregates %>% 
+  arrange(VAS) %>% 
+  mutate(VAS_Rank = seq(1:nrow(Aggregates))/nrow(Aggregates)*100)
 
 
 ```
+
